--- a/index.html
+++ b/index.html
@@ -2,30 +2,53 @@
 <html>
 
 <head>
-    <title>My Landing Page</title>
+    <title>Ghassan's Professional Portfolio</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
-    <h1 class="firstHeader">My Landing Page</h1>
     <header>
-        <ul class="headerLinks">
-            <li class="pageLinks">LinkedIn</li>
-            <li class="pageLinks">GitHub</li>
-            <li class="pageLinks">Portfolio</li>
-            <li class="pageLinks">About Me</li>
-        </ul>
+        <h1>Ghassan's Professional Portfolio</h1>
+        <nav class="page-links">
+            <a href="#about-me">About Me</a>
+            <a href="#projects">Projects</a>
+            <a href="#contact-me">Contact</a>
+        </nav>
     </header>
+    
+    <main>
+        <section class="about-me" id="about-me">
+            <h2>About Me</h2>
+            <img src="assets/images/profile-picture.jpg" alt="a picture of me">
+            <p>Hello, my name is Ghassan. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+            aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+            aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+            occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+            aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <hr />
+        </section>
 
-    <figure>
-        <img src="assets/images/profile-picture.jpg" alt="me">
-        <figcaption>A Picture of Me</figcaption>
-    </figure>
+        <section id="projects">
+            <h2>Projects</h2>
+            <section>
+                <h3>Project 1</h3>
+                <p>Lorem ipsum</p>
+            </section>
 
-    <footer>
+            <section>
+                <h3>Project 2</h3>
+                <p>Lorem ipsum</p>
+            </section>
+
+            <hr />
+        </section>
+    </main>
+
+    <footer id="contact-me">
         <ul>
-            <li class="inputBox">Name: <input type="text"></li>
-            <li class="inputBox">Contact: <input type="text"></li>
+            <h2>Contact Me</h2>
+            <li class="input-box">Name: <input type="text"></li>
+            <li class="input-box">Contact: <input type="text"></li>
         </ul>
     </footer>
 </body>
