developed the website further and added an image overlay

--- a/index.html
+++ b/index.html
@@ -20,31 +20,42 @@
         <section class="about-me" id="about-me">
             <h2>About Me</h2>
             <img src="assets/images/profile-picture.jpg" alt="a picture of me">
-            <p>Hello, my name is Ghassan. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-            aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-            aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-            occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-            aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p>
+                Hello, my name is Ghassan. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+                aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+                occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            </p>
             <hr />
         </section>
 
         <section id="projects">
             <h2>Projects</h2>
+
             <section>
-                <h3>Project 1</h3>
-                <p>Lorem ipsum</p>
+                <h3>Quiz Application</h3> <!-- Placeholder -->
+                <h4>HTML/CSS/JavaScript</h4>
+                <div class="first-project">
+                    <img class="quiz-image" src="assets/images/project-quiz.png" alt="question mark with paper in background">
+                    <div class="quiz-overlay">
+                        <p class="quiz-desc">
+                            This application is a quiz containing questions about various miscellaneous topics.
+                        </p>
+                    </div>
+                </div>
             </section>
 
             <section>
-                <h3>Project 2</h3>
-                <p>Lorem ipsum</p>
+                <h3>Project 2</h3> <!-- Placeholder -->
+                <p></p>
             </section>
 
             <hr />
         </section>
     </main>
 
-    <footer id="contact-me">
+    <footer class="contact-me" id="contact-me">
         <ul>
             <h2>Contact Me</h2>
             <li class="input-box">Name: <input type="text"></li>
