made media query features

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Ghassan's Professional Portfolio</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <script src="assets/javascript/script.js"></script>
 </head>
 
 <body>
@@ -39,12 +40,14 @@
                     <h3>Quiz Application</h3> <!-- Placeholder -->
                     <h4>HTML/CSS/JavaScript</h4>
                     <section class="quiz-project">
-                        <img class="quiz-image" src="assets/images/project-quiz.png" alt="question mark with paper in background">
-                        <section class="quiz-overlay">
-                            <p class="quiz-desc">
-                                This application is a quiz containing questions about various miscellaneous topics.
-                            </p>
-                        </section>
+                        <a href="https://github.com/ghassanalassadi/general-quiz" target="_blank">
+                            <img class="quiz-image" src="assets/images/project-quiz.png" alt="question mark with paper in background">
+                            <section class="quiz-overlay">
+                                <p class="quiz-desc">
+                                    This application is a quiz containing questions about various miscellaneous topics.
+                                </p>
+                            </section>
+                        </a>
                     </section>
                 </section>
 
@@ -53,12 +56,14 @@
                     <h3>Login Authentication</h3> <!-- Placeholder -->
                     <h4>JavaScript</h4>
                     <section class="login-project">
-                        <img class="login-image" src="assets/images/login-picture.jpg" alt="a login form">
-                        <section class="login-overlay">
-                            <p class="login-desc">
-                                This application is a simple login verifier.
-                            </p>
-                        </section>
+                        <a href="https://github.com/ghassanalassadi/login-authenticator" target="_blank">
+                            <img class="login-image" src="assets/images/login-picture.jpg" alt="a login form">
+                            <section class="login-overlay">
+                                <p class="login-desc">
+                                    This application is a simple login verifier.
+                                </p>
+                            </section>
+                        </a>
                     </section>
                 </section>
 
@@ -67,12 +72,14 @@
                     <h3>Code Snippets</h3> <!-- Placeholder -->
                     <h4>HTML/CSS/JavaScript</h4>
                     <section class="snippet-project">
-                        <img class="snippet-image" src="assets/images/code-picture.jpg" alt="picture of code">
-                        <section class="snippet-overlay">
-                            <p class="snippet-desc">
-                                This application is a collection of code snippets from various languages.
-                            </p>
-                        </section>
+                        <a href="https://github.com/ghassanalassadi/css-cheatsheet" target="_blank">
+                            <img class="snippet-image" src="assets/images/code-picture.jpg" alt="picture of code">
+                            <section class="snippet-overlay">
+                                <p class="snippet-desc">
+                                    This application is a collection of code snippets from various languages.
+                                </p>
+                            </section>
+                        </a>
                     </section>
                 </section>
             </section>
