--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h2>About Me</h2>
             <img src="assets/images/profile-picture.jpg" alt="a picture of me">
             <p>
-                Hello, my name is Ghassan. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                Hello, my name is Ghassan and welcome to my website. This website will list my projects as well as let you know how to contact me. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
                 aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
                 aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
                 occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
@@ -91,6 +91,9 @@
     <footer class="contact-me" id="contact-me">
         <ul>
             <h2>Contact Me</h2>
+            <p>
+                You can contact me on <a href="https://www.linkedin.com/">LinkedIn</a>!
+            </p>
             <li class="input-box">Name: <input type="text"></li>
             <li class="input-box">Contact: <input type="text"></li>
         </ul>
